[gd_scene load_steps=12 format=3 uid="uid://3ioo106b4s3t"]

[ext_resource type="Script" path="res://src/player_character.gd" id="1_4a2qr"]
[ext_resource type="Script" path="res://src/player_data.gd" id="2_2n7n7"]
[ext_resource type="Script" path="res://src/interact_ray.gd" id="3_k02tb"]
[ext_resource type="Script" path="res://src/state_machine.gd" id="4_nfkse"]

[sub_resource type="Resource" id="Resource_jnfj5"]
script = ExtResource("2_2n7n7")
guid = ""
name = ""
index = 0
cell_name = ""
position = Vector3(0, 0, 0)
direction = Vector3(0, 0, -1)
gender = 0
pronoun0 = "She"
pronoun1 = "Her"
pet_species = 0
pet_breed = 0
health_current = 100
health_max = 100
stamina_current = 100
stamina_max = 100
mana_current = 100
mana_max = 100
attack = 1
defense = 1
speed = 1

[sub_resource type="AnimationRootNode" id="AnimationRootNode_8pgnw"]

[sub_resource type="SphereShape3D" id="SphereShape3D_oi3bu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gx7sn"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_726kc"]
material = SubResource("StandardMaterial3D_gx7sn")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bk7uc"]
transparency = 1
albedo_color = Color(0.8, 0.8, 0, 0.0941176)

[sub_resource type="BoxMesh" id="BoxMesh_24owg"]
material = SubResource("StandardMaterial3D_bk7uc")
size = Vector3(1, 0.02, 1)

[node name="PlayerCharacter" type="CharacterBody3D" groups=["LOAD", "PLAYER", "SAVE", "UNLOAD"]]
collision_layer = 2
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource("1_4a2qr")
data = SubResource("Resource_jnfj5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationRootNode_8pgnw")
anim_player = NodePath("../AnimationPlayer")

[node name="CameraPivotY" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CameraPivotX" type="SpringArm3D" parent="CameraPivotY"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
spring_length = 10.0
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="CameraPivotY/CameraPivotX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_oi3bu")

[node name="InteractRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 0, -1.5)
collision_mask = 4
script = ExtResource("3_k02tb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_726kc")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_nfkse")

[node name="TargetMarker" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_24owg")
